{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 15,
  "lineage": "2071ceec-f8bf-c4ad-8e9a-c73a07936bcd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b4edc315f234def7",
            "public_dns": "ec2-13-228-210-136.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.210.136",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_nat"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b02e6dd3efebd61",
            "arn": "arn:aws:ec2:ap-southeast-1:659759626052:instance/i-0500f06c77a853969",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0500f06c77a853969",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_symbiosis",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0533eaf824ca9be1a",
            "private_dns": "ip-192-168-0-69.ap-southeast-1.compute.internal",
            "private_ip": "192.168.0.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e3cac8e6af408cdc",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009faa6d3219e2622",
            "tags": {
              "Name": "database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-073d48e42a6b4f2c9"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_symbiosis",
            "aws_security_group.sg_public",
            "aws_subnet.sub_public",
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b02e6dd3efebd61",
            "arn": "arn:aws:ec2:ap-southeast-1:659759626052:instance/i-0026dc32bd857f330",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0026dc32bd857f330",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_symbiosis",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-096731221fda0ceac",
            "private_dns": "ip-192-168-0-82.ap-southeast-1.compute.internal",
            "private_ip": "192.168.0.82",
            "public_dns": "ec2-54-255-213-111.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.213.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-044da4db2bc270e2d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009faa6d3219e2622",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-073d48e42a6b4f2c9"
            ]
          },
          "dependencies": [
            "aws_key_pair.kp_symbiosis",
            "aws_security_group.sg_public",
            "aws_subnet.sub_public",
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03be5bbb10533f70d",
            "owner_id": "659759626052",
            "tags": {
              "Name": "symbiosis_igw"
            },
            "vpc_id": "vpc-0168ec421d1bf9e7a"
          },
          "dependencies": [
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4edc315f234def7",
            "id": "nat-098e3ef6f1b57c52a",
            "network_interface_id": "eni-0fbec9d78e24d48d4",
            "private_ip": "192.168.1.129",
            "public_ip": "13.228.210.136",
            "subnet_id": "subnet-01f7e977bea265939",
            "tags": {
              "Name": "NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.sub_private",
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "access_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03be5bbb10533f70d",
            "id": "r-rtb-0babbb66d8da2e6881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0babbb66d8da2e688",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ac56079612103cfb",
            "owner_id": "659759626052",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-098e3ef6f1b57c52a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat_rt"
            },
            "vpc_id": "vpc-0168ec421d1bf9e7a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.db",
            "aws_subnet.sub_private",
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07db965a19edccc95",
            "route_table_id": "rtb-0ac56079612103cfb",
            "subnet_id": "subnet-01f7e977bea265939"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.db",
            "aws_route_table.nat",
            "aws_subnet.sub_private",
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:659759626052:security-group/sg-073d48e42a6b4f2c9",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073d48e42a6b4f2c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_devops",
            "name_prefix": null,
            "owner_id": "659759626052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0168ec421d1bf9e7a"
          },
          "dependencies": [
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:659759626052:subnet/subnet-01f7e977bea265939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-01f7e977bea265939",
            "map_public_ip_on_launch": false,
            "owner_id": "659759626052",
            "tags": {
              "Name": "sub_private"
            },
            "vpc_id": "vpc-0168ec421d1bf9e7a"
          },
          "dependencies": [
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:659759626052:subnet/subnet-009faa6d3219e2622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-009faa6d3219e2622",
            "map_public_ip_on_launch": true,
            "owner_id": "659759626052",
            "tags": {
              "Name": "sub_public"
            },
            "vpc_id": "vpc-0168ec421d1bf9e7a"
          },
          "dependencies": [
            "aws_vpc.symbiosis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "symbiosis_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:659759626052:vpc/vpc-0168ec421d1bf9e7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-004651f25cb228410",
            "default_route_table_id": "rtb-0babbb66d8da2e688",
            "default_security_group_id": "sg-051229d89e9850898",
            "dhcp_options_id": "dopt-1bd6dc7c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0168ec421d1bf9e7a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0babbb66d8da2e688",
            "owner_id": "659759626052",
            "tags": {
              "Name": "symbiosis_vpc"
            }
          }
        }
      ]
    }
  ]
}